[package]
name = "fixedtick"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
bevy = "0.14.1"
bytes = "1.7.1"
serde = { version = "1.0.209", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "serde"] }
iyes_perf_ui = "0.3.0"